tests/checker/diagnostics/0803_polyvar_branch_result_mismatch_05.ml.infer.expected
File "0803_polyvar_branch_result_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0803_polyvar_branch_result_mismatch_05 is not a valid module name.

File "0803_polyvar_branch_result_mismatch_05.ml", line 3, characters 21-22:
3 |   | `B (y : bool) -> y
                         ^
Error: The value y has type bool but an expression was expected of type int
