tests/checker/diagnostics/0803_polyvar_branch_result_mismatch_05.ml
let use_epsilon = function
  | `A (x : int) -> x
  | `B (y : bool) -> y
